--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
                                 <span></span>
                             </div><!-- /.mobile-nav__toggler -->
                             
-                            <a href="contact.html" class="modins-btn main-header__btn" style="margin-left: 5px;">
+                            <a href="" class="modins-btn main-header__btn" style="margin-left: 5px;">
                                 Campara con nosotros
                                 <em></em>
                             </a><!-- /.thm-btn main-header__btn -->
                             
-                            <a href="contact.html" class="modins-btn main-header__btn">
+                            <a href="" class="modins-btn main-header__btn">
                                 Conviértete en Asesor
                                 <em></em>
                             </a>
